copiar api service

--- a/biotecgait/biotecgait.csproj
+++ b/biotecgait/biotecgait.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="WisewalkSDK">
+      <HintPath>Libraries\WisewalkSDK.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
